// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WoSDocTypesField component should render default view 1`] = `
<GenericSelectField
  error={false}
  errorText=""
  genericSelectFieldId="rek-wok-doc-type"
  hideLabel={false}
  itemsList={
    Array [
      Object {
        "disabled": true,
        "text": "Please choose an option",
        "value": -1,
      },
      Object {
        "text": "None",
        "value": "None",
      },
      Object {
        "text": "2 - Abstract of Published item",
        "value": "2",
      },
      Object {
        "text": "A - Art Exhibit Review",
        "value": "A",
      },
      Object {
        "text": "@ - Article",
        "value": "@",
      },
      Object {
        "text": "7 - Bibliography",
        "value": "7",
      },
      Object {
        "text": "I - Biographical-Item",
        "value": "I",
      },
      Object {
        "text": "B - Book Review",
        "value": "B",
      },
      Object {
        "text": "K - Chronology",
        "value": "K",
      },
      Object {
        "text": "C - Correction, Addition",
        "value": "C",
      },
      Object {
        "text": "Z - Dance Performance Review",
        "value": "Z",
      },
      Object {
        "text": "0 - Database Review",
        "value": "0",
      },
      Object {
        "text": "D - Discussion",
        "value": "D",
      },
      Object {
        "text": "E - Editorial Material",
        "value": "E",
      },
      Object {
        "text": "X - Excerpt",
        "value": "X",
      },
      Object {
        "text": "O - Fiction, Creative Prose",
        "value": "O",
      },
      Object {
        "text": "F - Film Review",
        "value": "F",
      },
      Object {
        "text": "P - Fully Published Paper",
        "value": "P",
      },
      Object {
        "text": "U - Fully Published Paper",
        "value": "U",
      },
      Object {
        "text": "8 - Hardware Review",
        "value": "8",
      },
      Object {
        "text": "L - Letter",
        "value": "L",
      },
      Object {
        "text": "MC - Meeting Abstract",
        "value": "MC",
      },
      Object {
        "text": "M - Meeting Abstract",
        "value": "M",
      },
      Object {
        "text": "J - Music Performance Review",
        "value": "J",
      },
      Object {
        "text": "S - Music Score",
        "value": "S",
      },
      Object {
        "text": "G - Music Score Review",
        "value": "G",
      },
      Object {
        "text": "5 - News Item",
        "value": "5",
      },
      Object {
        "text": "N - Note",
        "value": "N",
      },
      Object {
        "text": "Y - Poetry",
        "value": "Y",
      },
      Object {
        "text": "$ - Proceedings Paper",
        "value": "$",
      },
      Object {
        "text": "H - Record Review",
        "value": "H",
      },
      Object {
        "text": "6 - Reprint",
        "value": "6",
      },
      Object {
        "text": "R - Review",
        "value": "R",
      },
      Object {
        "text": "Q - Script",
        "value": "Q",
      },
      Object {
        "text": "9 - Software Review",
        "value": "9",
      },
      Object {
        "text": "T - Theater Review",
        "value": "T",
      },
      Object {
        "text": "V - TV Review, Radio Review, Video Review",
        "value": "V",
      },
    ]
  }
  locale={
    Object {
      "label": undefined,
    }
  }
  value={-1}
/>
`;

exports[`WoSDocTypesField component should render immutable list as selected value with given field props 1`] = `
<GenericSelectField
  error={true}
  errorText="Test error"
  genericSelectFieldId="rek-wok-doc-type"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Immutable.List [
        "One",
        "Two",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "disabled": true,
        "text": "Please choose an option",
        "value": -1,
      },
      Object {
        "text": "None",
        "value": "None",
      },
      Object {
        "text": "2 - Abstract of Published item",
        "value": "2",
      },
      Object {
        "text": "A - Art Exhibit Review",
        "value": "A",
      },
      Object {
        "text": "@ - Article",
        "value": "@",
      },
      Object {
        "text": "7 - Bibliography",
        "value": "7",
      },
      Object {
        "text": "I - Biographical-Item",
        "value": "I",
      },
      Object {
        "text": "B - Book Review",
        "value": "B",
      },
      Object {
        "text": "K - Chronology",
        "value": "K",
      },
      Object {
        "text": "C - Correction, Addition",
        "value": "C",
      },
      Object {
        "text": "Z - Dance Performance Review",
        "value": "Z",
      },
      Object {
        "text": "0 - Database Review",
        "value": "0",
      },
      Object {
        "text": "D - Discussion",
        "value": "D",
      },
      Object {
        "text": "E - Editorial Material",
        "value": "E",
      },
      Object {
        "text": "X - Excerpt",
        "value": "X",
      },
      Object {
        "text": "O - Fiction, Creative Prose",
        "value": "O",
      },
      Object {
        "text": "F - Film Review",
        "value": "F",
      },
      Object {
        "text": "P - Fully Published Paper",
        "value": "P",
      },
      Object {
        "text": "U - Fully Published Paper",
        "value": "U",
      },
      Object {
        "text": "8 - Hardware Review",
        "value": "8",
      },
      Object {
        "text": "L - Letter",
        "value": "L",
      },
      Object {
        "text": "MC - Meeting Abstract",
        "value": "MC",
      },
      Object {
        "text": "M - Meeting Abstract",
        "value": "M",
      },
      Object {
        "text": "J - Music Performance Review",
        "value": "J",
      },
      Object {
        "text": "S - Music Score",
        "value": "S",
      },
      Object {
        "text": "G - Music Score Review",
        "value": "G",
      },
      Object {
        "text": "5 - News Item",
        "value": "5",
      },
      Object {
        "text": "N - Note",
        "value": "N",
      },
      Object {
        "text": "Y - Poetry",
        "value": "Y",
      },
      Object {
        "text": "$ - Proceedings Paper",
        "value": "$",
      },
      Object {
        "text": "H - Record Review",
        "value": "H",
      },
      Object {
        "text": "6 - Reprint",
        "value": "6",
      },
      Object {
        "text": "R - Review",
        "value": "R",
      },
      Object {
        "text": "Q - Script",
        "value": "Q",
      },
      Object {
        "text": "9 - Software Review",
        "value": "9",
      },
      Object {
        "text": "T - Theater Review",
        "value": "T",
      },
      Object {
        "text": "V - TV Review, Radio Review, Video Review",
        "value": "V",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  meta={
    Object {
      "error": "Test error",
    }
  }
  onChange={[MockFunction]}
  placeholder="Test placeholder"
  value={
    Array [
      "One",
      "Two",
    ]
  }
/>
`;

exports[`WoSDocTypesField component should render when given a default value field props 1`] = `
<GenericSelectField
  defaultValue="afr"
  error={false}
  errorText=""
  genericSelectFieldId="rek-wok-doc-type"
  hideLabel={false}
  itemsList={
    Array [
      Object {
        "disabled": true,
        "text": "Please choose an option",
        "value": -1,
      },
      Object {
        "text": "None",
        "value": "None",
      },
      Object {
        "text": "2 - Abstract of Published item",
        "value": "2",
      },
      Object {
        "text": "A - Art Exhibit Review",
        "value": "A",
      },
      Object {
        "text": "@ - Article",
        "value": "@",
      },
      Object {
        "text": "7 - Bibliography",
        "value": "7",
      },
      Object {
        "text": "I - Biographical-Item",
        "value": "I",
      },
      Object {
        "text": "B - Book Review",
        "value": "B",
      },
      Object {
        "text": "K - Chronology",
        "value": "K",
      },
      Object {
        "text": "C - Correction, Addition",
        "value": "C",
      },
      Object {
        "text": "Z - Dance Performance Review",
        "value": "Z",
      },
      Object {
        "text": "0 - Database Review",
        "value": "0",
      },
      Object {
        "text": "D - Discussion",
        "value": "D",
      },
      Object {
        "text": "E - Editorial Material",
        "value": "E",
      },
      Object {
        "text": "X - Excerpt",
        "value": "X",
      },
      Object {
        "text": "O - Fiction, Creative Prose",
        "value": "O",
      },
      Object {
        "text": "F - Film Review",
        "value": "F",
      },
      Object {
        "text": "P - Fully Published Paper",
        "value": "P",
      },
      Object {
        "text": "U - Fully Published Paper",
        "value": "U",
      },
      Object {
        "text": "8 - Hardware Review",
        "value": "8",
      },
      Object {
        "text": "L - Letter",
        "value": "L",
      },
      Object {
        "text": "MC - Meeting Abstract",
        "value": "MC",
      },
      Object {
        "text": "M - Meeting Abstract",
        "value": "M",
      },
      Object {
        "text": "J - Music Performance Review",
        "value": "J",
      },
      Object {
        "text": "S - Music Score",
        "value": "S",
      },
      Object {
        "text": "G - Music Score Review",
        "value": "G",
      },
      Object {
        "text": "5 - News Item",
        "value": "5",
      },
      Object {
        "text": "N - Note",
        "value": "N",
      },
      Object {
        "text": "Y - Poetry",
        "value": "Y",
      },
      Object {
        "text": "$ - Proceedings Paper",
        "value": "$",
      },
      Object {
        "text": "H - Record Review",
        "value": "H",
      },
      Object {
        "text": "6 - Reprint",
        "value": "6",
      },
      Object {
        "text": "R - Review",
        "value": "R",
      },
      Object {
        "text": "Q - Script",
        "value": "Q",
      },
      Object {
        "text": "9 - Software Review",
        "value": "9",
      },
      Object {
        "text": "T - Theater Review",
        "value": "T",
      },
      Object {
        "text": "V - TV Review, Radio Review, Video Review",
        "value": "V",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  placeholder="Test placeholder"
  value={
    Array [
      "afr",
    ]
  }
/>
`;

exports[`WoSDocTypesField component should render with given field props 1`] = `
<GenericSelectField
  error={true}
  errorText="Test error"
  genericSelectFieldId="rek-wok-doc-type"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Array [
        "One",
        "Two",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "disabled": true,
        "text": "Please choose an option",
        "value": -1,
      },
      Object {
        "text": "None",
        "value": "None",
      },
      Object {
        "text": "2 - Abstract of Published item",
        "value": "2",
      },
      Object {
        "text": "A - Art Exhibit Review",
        "value": "A",
      },
      Object {
        "text": "@ - Article",
        "value": "@",
      },
      Object {
        "text": "7 - Bibliography",
        "value": "7",
      },
      Object {
        "text": "I - Biographical-Item",
        "value": "I",
      },
      Object {
        "text": "B - Book Review",
        "value": "B",
      },
      Object {
        "text": "K - Chronology",
        "value": "K",
      },
      Object {
        "text": "C - Correction, Addition",
        "value": "C",
      },
      Object {
        "text": "Z - Dance Performance Review",
        "value": "Z",
      },
      Object {
        "text": "0 - Database Review",
        "value": "0",
      },
      Object {
        "text": "D - Discussion",
        "value": "D",
      },
      Object {
        "text": "E - Editorial Material",
        "value": "E",
      },
      Object {
        "text": "X - Excerpt",
        "value": "X",
      },
      Object {
        "text": "O - Fiction, Creative Prose",
        "value": "O",
      },
      Object {
        "text": "F - Film Review",
        "value": "F",
      },
      Object {
        "text": "P - Fully Published Paper",
        "value": "P",
      },
      Object {
        "text": "U - Fully Published Paper",
        "value": "U",
      },
      Object {
        "text": "8 - Hardware Review",
        "value": "8",
      },
      Object {
        "text": "L - Letter",
        "value": "L",
      },
      Object {
        "text": "MC - Meeting Abstract",
        "value": "MC",
      },
      Object {
        "text": "M - Meeting Abstract",
        "value": "M",
      },
      Object {
        "text": "J - Music Performance Review",
        "value": "J",
      },
      Object {
        "text": "S - Music Score",
        "value": "S",
      },
      Object {
        "text": "G - Music Score Review",
        "value": "G",
      },
      Object {
        "text": "5 - News Item",
        "value": "5",
      },
      Object {
        "text": "N - Note",
        "value": "N",
      },
      Object {
        "text": "Y - Poetry",
        "value": "Y",
      },
      Object {
        "text": "$ - Proceedings Paper",
        "value": "$",
      },
      Object {
        "text": "H - Record Review",
        "value": "H",
      },
      Object {
        "text": "6 - Reprint",
        "value": "6",
      },
      Object {
        "text": "R - Review",
        "value": "R",
      },
      Object {
        "text": "Q - Script",
        "value": "Q",
      },
      Object {
        "text": "9 - Software Review",
        "value": "9",
      },
      Object {
        "text": "T - Theater Review",
        "value": "T",
      },
      Object {
        "text": "V - TV Review, Radio Review, Video Review",
        "value": "V",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  meta={
    Object {
      "error": "Test error",
    }
  }
  onChange={[MockFunction]}
  placeholder="Test placeholder"
  value={-1}
/>
`;
